Bug 452161 – pyatspi insertText doesn't work in empty textboxes, r=aaronlev, MarcoZ